--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run prisma:generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
@@ -25,8 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "uuid": "^9.0.0"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
